// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot when positions are loading 1`] = `
<Fragment>
  <h1>
    Home
  </h1>
  <div>
    <Progress />
  </div>
  <WithStyles(ForwardRef(Tabs))
    onChange={[Function]}
    value={0}
  >
    <WithStyles(ForwardRef(Tab))
      label="Open"
    />
    <WithStyles(ForwardRef(Tab))
      label="Closed"
    />
  </WithStyles(ForwardRef(Tabs))>
  <div>
    <Progress />
  </div>
</Fragment>
`;

exports[`matches snapshot with the first tab 1`] = `
<Fragment>
  <h1>
    Home
  </h1>
  <div>
    <withProps(Connect(lifecycle(mapProps(withProps(StockPositionsValue)))))
      positions={Array []}
    >
      <Component />
    </withProps(Connect(lifecycle(mapProps(withProps(StockPositionsValue)))))>
  </div>
  <WithStyles(ForwardRef(Tabs))
    onChange={[Function]}
    value={0}
  >
    <WithStyles(ForwardRef(Tab))
      label="Open"
    />
    <WithStyles(ForwardRef(Tab))
      label="Closed"
    />
  </WithStyles(ForwardRef(Tabs))>
  <div>
    <withProps(withProps(Connect(lifecycle(mapProps(mapProps(OpenPositionsList))))))
      onPositionClick={[Function]}
      positions={Array []}
    />
  </div>
</Fragment>
`;

exports[`matches snapshot with the second tab 1`] = `
<Fragment>
  <h1>
    Home
  </h1>
  <div>
    <withProps(Connect(lifecycle(mapProps(withProps(StockPositionsValue)))))
      positions={Array []}
    >
      <Component />
    </withProps(Connect(lifecycle(mapProps(withProps(StockPositionsValue)))))>
  </div>
  <WithStyles(ForwardRef(Tabs))
    onChange={[Function]}
    value={1}
  >
    <WithStyles(ForwardRef(Tab))
      label="Open"
    />
    <WithStyles(ForwardRef(Tab))
      label="Closed"
    />
  </WithStyles(ForwardRef(Tabs))>
  <div>
    <withProps(withProps(Connect(lifecycle(mapProps(mapProps(ClosedPositionsList))))))
      onPositionClick={[Function]}
      positions={Array []}
    />
  </div>
</Fragment>
`;
